--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "6.5",
-        "eaglewu/swoole-ide-helper": "dev-master"
+        "eaglewu/swoole-ide-helper": "dev-master",
+        "behat/behat": "^3.4"
     }
 }
