--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
     "require-dev": {
         "phpunit/phpunit": "6.5",
         "eaglewu/swoole-ide-helper": "dev-master",
-        "behat/behat": "^3.4"
+        "peridot-php/peridot": "^1.19"
     }
 }
