add events tests

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
     "require-dev": {
         "phpunit/phpunit": "6.5",
         "eaglewu/swoole-ide-helper": "dev-master",
-        "peridot-php/peridot": "^1.19"
+        "phpspec/phpspec": "^5.0"
     }
 }
