--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,13 @@
             "Press\\": "lib/"
         }
     },
-    "require": {},
+    "require": {
+      "ext-json": "^1.6"
+    },
     "require-dev": {
         "phpunit/phpunit": "6.5",
         "eaglewu/swoole-ide-helper": "dev-master",
-        "phpspec/phpspec": "^5.0"
+        "phpspec/phpspec": "^5.0",
+        "rmccue/requests": "^1.7"
     }
 }
