--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
         }
     },
     "require": {
-        "tbht/php-events": "^1.0"
+        "tbht/php-events": "^1.0",
+        "php": "^7.3",
+        "react/promise": "^2.8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.2"
     }
 }
