--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
     "autoload": {
         "psr-4": {
             "Press\\": "lib/"
-        }
+        },
+        "files": ["lib/functions_include.php"]
     },
     "require": {
         "tbht/php-events": "^1.0",
         "php": "^7.3",
-        "react/promise": "^2.8"
+        "react/promise": "^2.8",
+        "react/promise-timer": "^1.5",
+        "react/event-loop": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2"
