feat: add app, ctx, req, res module

--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,11 @@
     },
     "require": {
         "tbht/php-events": "^1.0",
-        "php": "^7.3",
+        "php": "^7.4",
         "react/promise": "^2.8",
         "react/promise-timer": "^1.5",
-        "react/event-loop": "^1.1"
+        "react/event-loop": "^1.1",
+        "react/http": "^0.8.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2"
