--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "react/event-loop": "^1.1",
     "react/http": "^1.0",
     "tbht/php-negotiator": "^1.0",
-    "tbht/php-accepts": "^1.0"
+    "tbht/php-accepts": "^1.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.2"
