--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.2"
+    "phpunit/phpunit": "^9.2",
+    "clue/block-react": "^1.4"
   }
 }
