--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Setup PHP Action
+      uses: shivammathur/setup-php@2.10.0
 
     - name: Validate composer.json and composer.lock
       run: composer validate
