--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,6 +16,8 @@ jobs:
     
     - name: Setup PHP Action
       uses: shivammathur/setup-php@2.10.0
+      with:
+        php-version: '7.4'
 
     - name: Validate composer.json and composer.lock
       run: composer validate
